# Airflow-Brew-Pipeline

./: .gitignore  Dockerfile  README.md  config.sh  docker-compose.yml  prod_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
dags/: bronze_layer.py  dag_brewerydb_etl.py  gold_layer.py
dags/src/: silver_layer.py
sql/: brewery.sql  brewerydb.sql
src/: bronze_layer.py  gold_layer.py  main.py  silver_layer.py  utils.py
tests/: test_conexao.py  test_variaveis.py  teste_de_conexao.py  teste_de_variaveis.py  teste_spark_conexao.py
