[project]
name = "Airflow-Brew-Pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Belisario",email = "gbo2000@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mermaid (>=0.3.2,<0.4.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
