[project]
name = "airflow-brew-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow[celery]==2.9",
    "azure-storage-blob>=12.26.0",
    "mermaid-py>=0.8.0",
    "mkdocs>=1.6.1",
    "pyspark>=4.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]
